<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:textSize="@dimen/text_size"
        tools:text="@string/question_australia"
        android:textColor="@color/purple_500"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:text="@string/false_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:contentDescription="@string/next_button"
            android:src="@drawable/arrow_right" />

    </LinearLayout>
</LinearLayout>